.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/security.istio.io_PeerAuthentication.sample.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: valid-peer-authentication
spec:
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    8080:
      mode: STRICT
  selector:
    matchLabels:
      app: httpbin
      version: v1
