.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/security.istio.io_RequestAuthentication.sample.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: valid-request-authentication
spec:
  jwtRules:
  - issuer: example.com
  selector:
    matchLabels:
      app: httpbin
      version: v1
