.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/networking.istio.io_Gateway.sample.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: valid-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - a.istio-system.svc.cluster.local
    port:
      name: tcp
      number: 31400
      protocol: TCP
