.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/networking.istio.io_DestinationRule.sample.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: valid-destination-rule
spec:
  host: c
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
