.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/networking.istio.io_Sidecar.sample.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: valid-sidecar-config
spec:
  egress:
  - hosts:
    - abc/*
