.vscode/extensions/googlecloudtools.cloudcode-1.19.0/krm-catalog/apigroups/istio_io/networking.istio.io_VirtualService.sample.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: valid-virtual-service
spec:
  hosts:
  - c
  http:
  - route:
    - destination:
        host: c
        subset: v1
      weight: 75
    - destination:
        host: c
        subset: v2
      weight: 25
